app.css
/* ... */
.pr-2 { padding-right: 0.5rem !important; }
.pr-3 { padding-right: 0.75rem !important; }
.pr-4 { padding-right: 1rem !important; }

.py-0 { padding-top: 0; padding-bottom: 0; }
.py-1 { padding-top: 0.25rem; padding-bottom: 0.25rem; }
.py-2 { padding-top: 0.5rem; padding-bottom: 0.5rem; }
.py-3 { padding-top: 0.75rem; padding-bottom: 0.75rem; }
.py-4 { padding-top: 1rem; padding-bottom: 1rem; }

.pt-0 { padding-top: 0; }
.pt-1 { padding-top: 0.25rem; }
.pt-2 { padding-top: 0.5rem; }
.pt-3 { padding-top: 0.75rem; }
.pt-4 { padding-top: 1rem; }

.header__logo-container,
.header__search-bar-container,
.header__user-profile-container {
    display: flex;
    align-items: center;
}

/* Header sections sizes and alignment */
/* Mobile */
    .header__logo-container {
        width: 17.5%;
        padding: 0 12px;
    }
    .header__search-bar-container {
        width: 55%;
    }
    .header__user-profile-container {
        width: 27.5%;
        justify-content: space-around;
    }
/* End Mobile */
@media screen and (min-width: 480px) { /* Desktop */
    header > [class^=header__] {
        width: 33%;
    }
    .header__logo-container {
        justify-content: start;
    }
}

.header__logo-large {
    display: none;
}
@media screen and (min-width: 480px) {
    .header__logo-small {
        display: none;
    }
    .header__logo-large {
        display: block;
    }
}

.header__search-bar-container {
    justify-content: center;
    position: relative;
    --icon-size: 1em;
    --padding: 8px;
}
.header__search-input-wrapper {
    width: 100%;
    height: 2rem;
}
.header__search-bar-container .search-icon {
    width: var(--icon-size);
    height: var(--icon-size);
    position: absolute;
    left: 1em;
    top: 50%;
    transform: translateY(-50%);
    z-index: 1;
    filter: var(--filter-color-light-gray);
}
.header__search-input {
    /* all: initial; */
    font-size: inherit;
    width: 100%;
    height: 100%;
    padding: 8px;
    padding-left: calc(var(--icon-size) * 2 + var(--padding));
    border: none;
    box-shadow: inset 0 0 0 1px #636363;
    border-radius: 0.5rem;
    background-color: var(--gray-300);
    color: var(--text-light-gray);
    transition: 0.15s;
}
.header__search-input::placeholder {
    color: #b5b5b5;
    font-weight: 300;
}
.header__search-input:hover {
    /* border: 1px solid #e1e1e1; */
    box-shadow: inset 0 0 0 1px #e1e1e1;
}
.header__search-input:focus {
    outline: none;
    /* border: 2px solid #fff; */
    box-shadow: inset 0 0 0 2px #fff;
}

@media screen and (min-width: 480px) {
    .header__user-profile-container {
        justify-content: end;
        gap: 10px;
        padding: 0 10px;
    }
}

@media screen and (min-width: 480px) {
    .header__shop-badge,
    .header__bell-icon-wrapper {
        height: 2rem;
        display: flex;
        align-items: center;
        border-radius: 8px;
    }
}

.header__bell-icon-wrapper {
    width: 2rem;
    height: 2rem;
}

@media screen and (min-width: 480px) {
    .header__bell-icon-wrapper {
        display: flex;
        justify-content: center;
        align-items: center;
        padding: 10px;
    }
    .header__bell-icon-wrapper,
    .header__shop-badge {
        background-color: var(--color-translucent-gray);
        transition: background-color 0.15s;
    }
    .header__bell-icon-wrapper:hover,
    .header__shop-badge:hover {
        background-color: #4a4a4a;
    }
}

.header__shop-badge {
    color: var(--text-light-gray);
    padding: 0;
}
@media screen and (min-width: 480px) {
    .header__shop-badge {
        background-color: var(--color-translucent-gray);
        padding: 2px;
    }
}

.header__shop-name {
    display: none;
}
@media screen and (min-width: 480px) {
    .header__shop-name {
        display: initial;
        padding: 5px;
    }
}
.header__shop-icon {
    border-radius: 8px;
    padding: 5px;
    background-color: #36FBA1;
    color: #000000AA;
    width: 2rem;
    height: 2rem;
}
@media screen and (min-width: 480px) {
    .header__shop-icon {
        height: 100%;
        width: auto;
    }
}

.popup-menu {
    position: absolute;
    top: calc(var(--header-height) + .5rem);
    right: 0.5rem;
    box-shadow: 0px 4px 8px 2px #0000000D;
    border: 1px solid #DBDBDB;
    width: 92vw;
    background-color: #fff;
    border-radius: 14px;
    visibility: hidden;
    z-index: 1;
}

.popup-menu--open {
    visibility: visible;
}

.alert-popup__body {
    background: #F1F1F1;
    border-radius: 0.125rem;
    color: #616161;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.store-menu {
}
.store-menu__menu-section {
    padding: 6px;
}
.store-menu__menu-section:not(:first-of-type) {
    border-top: 1px solid #e1e1e1;
}

.store-menu .header__shop-badge,
.store-menu .header__shop-badge:hover {
    background-color: #f1f1f1;
    cursor: default;
}
.store-menu .header__shop-name {
    color: var(--gray-300);
}

.dropdown-menu-item {
    width: 100%;
    color: var(--gray-300);
    font-weight: 400;
    min-height: 2rem;
    padding: 6px;
}
.dropdown-menu-item:hover {
    text-decoration: none;
    background-color: #f3f3f3;
}

@media screen and (min-width: 480px) {
    .popup-menu {
        max-width: 380px;
    }
}

main {
    margin: 5rem auto;
    max-width: 49.75rem;
}

.alert {
    background-color: #1a1a1a;
    padding: 0.75rem 1rem;
    display: flex;
    justify-content: space-between;
    gap: 1rem;
}
.alert .alert__content {
    color: var(--text-light-gray);
}
@media screen and (min-width: 480px) {
    .alert {
        border-radius: 0.5rem;
    }
}

.alert__content {
    display: flex;
    justify-content: space-between;
    flex-flow: row wrap;
    flex: 1;
    gap: 10px;
}

.alert__close {
    width: 2rem;
    height: 2rem;
}

.setup-guide {
    border: 1px solid #dbdbdb;
    padding: 0.5rem;
    background-color: #fff;
}
@media screen and (min-width: 480px) {
    .setup-guide {
        border-radius: 0.5rem;
    }
}
/* ... */

